# method

./: .env.example  .gitignore  CLAUDE.md  HARNESS.md  LICENSE  Makefile  README.md  pyproject.toml
app/: config.py  db.py  main.py  models.py
app/routers/: admin.py  auth.py  health.py  history.py  research.py
app/services/: auth_flow.py  claude_runner.py  comment_runner.py  error_copy.py  file_processor.py  mailer.py  research_runner.py
app/static/: app.js  style.css
app/templates/: _topbar.html  approval_error.html  approved.html  base.html  history.html  history_detail.html  index.html  landing.html  login.html
deploy/: cloudflared.service  method.service
docs/: AGENT_CONTEXT.md  CODE_REVIEW_PROMPT.md  DEV_LOG.md  HARNESS.md  INDEX.md  NEXT_SESSION_BRIEF.md  TESTER_PROMPT.md  TODO.md
docs/design/: issue-1-task-2.3-auth-flow.md  issue-1-task-2.4-auth-routes.md  issue-1-task-2.5-e2e-smtp.md  issue-2-task-3.1-file-processor.md  issue-2-task-3.2-claude-runner.md  issue-2-task-3.3-research-routes.md  issue-3-m4-frontend-ui.md  issue-4-feature-b-comments.md  issue-5-error-copy.md
docs/ops/: domain-setup.md
docs/runs/: 20260420-190704-run-tests-comments.md  20260420-190957-run-tests-fullregression.md  20260420-191659-review-issue4-featureB.md  20260420-195611-smoke-dev-featureB.md  20260420-231305-deploy-bf64cd2.md  20260420-231456-deploy-unknown.md  20260420-231522-deploy-8fee480.md  (+11 more)
scripts/: deploy.py  deploy.sh  init_db.py  promote-to-prod.sh  restore_drill.py  setup-systemd.sh  tunnel-url.sh
tests/: conftest.py  test_smoke.py  test_static_assets.py
(+38 files in other folders)
